Actualice año de elaboracion

--- a/Challengue_front-end.html
+++ b/Challengue_front-end.html
@@ -72,7 +72,7 @@
 </section>
 
     <section class="skillsyhobbies">
-        <h3 class="skills__texto">Skills</h3>
+        <h3 class="skills__texto">Skillss</h3>
         <div class="skills">
 
        
@@ -245,7 +245,7 @@
 </section>
 <footer>
 <p>Desarrollado por Juan Fernando</p>
-<p>2022</p>
+<p>2023</p>
 </footer>
 
 </div>
